############################################################
#
# mUPnP for C
#
# Copyright (C) Satoshi Konno 2002
#
############################################################

mupnpcc_headers = \
	./mupnp/ActionList.h \
	./mupnp/AllowedValue.h \
	./mupnp/StateVariable.h \
	./mupnp/mUPnP.h \
	./mupnp/UPnPStatus.h \
	./mupnp/Device.h \
	./mupnp/DeviceList.h \
	./mupnp/Argument.h \
	./mupnp/Service.h \
	./mupnp/Icon.h \
	./mupnp/UPnP.h \
	./mupnp/ServiceStateTable.h \
	./mupnp/soap/SOAPResponse.h \
	./mupnp/soap/SOAPRequest.h \
	./mupnp/soap/SOAP.h \
	./mupnp/Action.h \
	./mupnp/xml/NodeList.h \
	./mupnp/xml/AttributeList.h \
	./mupnp/xml/ServiceData.h \
	./mupnp/xml/ArgumentData.h \
	./mupnp/xml/Parser.h \
	./mupnp/xml/Node.h \
	./mupnp/xml/XML.h \
	./mupnp/xml/ParserException.h \
	./mupnp/xml/StateVariableData.h \
	./mupnp/xml/ActionData.h \
	./mupnp/xml/Attribute.h \
	./mupnp/xml/NodeData.h \
	./mupnp/xml/DeviceData.h \
	./mupnp/common/Vector.h \
	./mupnp/Log.h \
	./mupnp/AllowedValueList.h \
	./mupnp/MediaServer.h \
	./mupnp/ControlPoint.h \
	./mupnp/device/Advertiser.h \
	./mupnp/device/DeviceChangeListener.h \
	./mupnp/device/SearchListener.h \
	./mupnp/device/ST.h \
	./mupnp/device/USN.h \
	./mupnp/device/Disposer.h \
	./mupnp/device/NT.h \
	./mupnp/device/SearchResponseListener.h \
	./mupnp/device/MAN.h \
	./mupnp/device/Description.h \
	./mupnp/device/NotifyListener.h \
	./mupnp/device/NTS.h \
	./mupnp/device/InvalidDescriptionException.h \
	./mupnp/ssdp/SSDPNotifySocket.h \
	./mupnp/ssdp/SSDPNotifyRequest.h \
	./mupnp/ssdp/SSDPSearchResponseSocket.h \
	./mupnp/ssdp/HTTPUSocket.h \
	./mupnp/ssdp/SSDPSearchSocketList.h \
	./mupnp/ssdp/SSDP.h \
	./mupnp/ssdp/HTTPMUSocket.h \
	./mupnp/ssdp/SSDPSearchResponse.h \
	./mupnp/ssdp/SSDPResponse.h \
	./mupnp/ssdp/SSDPNotifySocketList.h \
	./mupnp/ssdp/SSDPSearchSocket.h \
	./mupnp/ssdp/SSDPPacket.h \
	./mupnp/ssdp/SSDPSearchRequest.h \
	./mupnp/ssdp/SSDPSearchResponseSocketList.h \
	./mupnp/ssdp/SSDPRequest.h \
	./mupnp/ServiceList.h \
	./mupnp/IconList.h \
	./mupnp/event/NotifyRequest.h \
	./mupnp/event/EventListener.h \
	./mupnp/event/SubscriptionRequest.h \
	./mupnp/event/Subscriber.h \
	./mupnp/event/Subscription.h \
	./mupnp/event/SubscriptionResponse.h \
	./mupnp/event/PropertyList.h \
	./mupnp/event/Property.h \
	./mupnp/event/SubscriberList.h \
	./mupnp/platform.h \
	./mupnp/control/Control.h \
	./mupnp/control/ControlRequest.h \
	./mupnp/control/QueryResponse.h \
	./mupnp/control/QueryListener.h \
	./mupnp/control/RenewSubscriber.h \
	./mupnp/control/ActionListener.h \
	./mupnp/control/ActionResponse.h \
	./mupnp/control/QueryRequest.h \
	./mupnp/control/ActionRequest.h \
	./mupnp/control/ControlResponse.h \
	./mupnp/AllowedValueRange.h \
	./mupnp/ArgumentList.h

nobase_include_HEADERS = \
	$(mupnpcc_headers)
