############################################################
#
# mUPnP for C
#
# Copyright (C) Satoshi Konno 2002
#
############################################################

mupnpcc_headers = \
	./mupnp/xml/ArgumentData.h \
	./mupnp/xml/XML.h \
	./mupnp/xml/NodeData.h \
	./mupnp/xml/ParserException.h \
	./mupnp/xml/ActionData.h \
	./mupnp/xml/AttributeList.h \
	./mupnp/xml/Parser.h \
	./mupnp/xml/NodeList.h \
	./mupnp/xml/Node.h \
	./mupnp/xml/DeviceData.h \
	./mupnp/xml/Attribute.h \
	./mupnp/xml/ServiceData.h \
	./mupnp/xml/StateVariableData.h \
	./mupnp/ArgumentList.h \
	./mupnp/Icon.h \
	./mupnp/UPnPStatus.h \
	./mupnp/ServiceList.h \
	./mupnp/common/Vector.h \
	./mupnp/UPnP.h \
	./mupnp/StateVariable.h \
	./mupnp/AllowedValueList.h \
	./mupnp/control/QueryListener.h \
	./mupnp/control/RenewSubscriber.h \
	./mupnp/control/QueryRequest.h \
	./mupnp/control/ControlResponse.h \
	./mupnp/control/ActionRequest.h \
	./mupnp/control/Control.h \
	./mupnp/control/QueryResponse.h \
	./mupnp/control/ActionResponse.h \
	./mupnp/control/ActionListener.h \
	./mupnp/control/ControlRequest.h \
	./mupnp/AllowedValueRange.h \
	./mupnp/ssdp/SSDPSearchResponse.h \
	./mupnp/ssdp/SSDPSearchSocket.h \
	./mupnp/ssdp/SSDPResponse.h \
	./mupnp/ssdp/SSDPNotifyRequest.h \
	./mupnp/ssdp/SSDPSearchResponseSocketList.h \
	./mupnp/ssdp/SSDPSearchSocketList.h \
	./mupnp/ssdp/SSDPSearchResponseSocket.h \
	./mupnp/ssdp/SSDPRequest.h \
	./mupnp/ssdp/SSDPPacket.h \
	./mupnp/ssdp/SSDPNotifySocket.h \
	./mupnp/ssdp/HTTPMUSocket.h \
	./mupnp/ssdp/SSDPNotifySocketList.h \
	./mupnp/ssdp/SSDPSearchRequest.h \
	./mupnp/ssdp/HTTPUSocket.h \
	./mupnp/ssdp/SSDP.h \
	./mupnp/ServiceStateTable.h \
	./mupnp/ControlPoint.h \
	./mupnp/DeviceList.h \
	./mupnp/device/NTS.h \
	./mupnp/device/NT.h \
	./mupnp/device/ST.h \
	./mupnp/device/SearchResponseListener.h \
	./mupnp/device/MAN.h \
	./mupnp/device/USN.h \
	./mupnp/device/Description.h \
	./mupnp/device/InvalidDescriptionException.h \
	./mupnp/device/NotifyListener.h \
	./mupnp/device/DeviceChangeListener.h \
	./mupnp/device/SearchListener.h \
	./mupnp/device/Advertiser.h \
	./mupnp/device/Disposer.h \
	./mupnp/Log.h \
	./mupnp/soap/SOAPRequest.h \
	./mupnp/soap/SOAPResponse.h \
	./mupnp/soap/SOAP.h \
	./mupnp/AllowedValue.h \
	./mupnp/Service.h \
	./mupnp/Argument.h \
	./mupnp/platform.h \
	./mupnp/net/URL.h \
	./mupnp/net/NetworkInterfaceList.h \
	./mupnp/net/ServerSocket.h \
	./mupnp/net/SocketImp.h \
	./mupnp/net/URI.h \
	./mupnp/net/SocketInputStream.h \
	./mupnp/net/MulticastSocket.h \
	./mupnp/net/Socket.h \
	./mupnp/net/HostInterface.h \
	./mupnp/net/DatagramPacket.h \
	./mupnp/net/InetSocketAddress.h \
	./mupnp/net/NetworkInterface.h \
	./mupnp/net/DatagramSocket.h \
	./mupnp/net/SocketUtil.h \
	./mupnp/event/EventListener.h \
	./mupnp/event/SubscriptionResponse.h \
	./mupnp/event/Property.h \
	./mupnp/event/NotifyRequest.h \
	./mupnp/event/Subscription.h \
	./mupnp/event/SubscriberList.h \
	./mupnp/event/Subscriber.h \
	./mupnp/event/SubscriptionRequest.h \
	./mupnp/event/PropertyList.h \
	./mupnp/http/HTTPResponse.h \
	./mupnp/http/ParameterList.h \
	./mupnp/http/HTTP.h \
	./mupnp/http/HTTPServerThread.h \
	./mupnp/http/HTTPServerList.h \
	./mupnp/http/HTTPPacket.h \
	./mupnp/http/HTML.h \
	./mupnp/http/HTTPStatus.h \
	./mupnp/http/Parameter.h \
	./mupnp/http/HTTPHeader.h \
	./mupnp/http/HTTPSocket.h \
	./mupnp/http/HTTPServer.h \
	./mupnp/http/HTTPDate.h \
	./mupnp/http/HTTPRequestListener.h \
	./mupnp/http/HTTPRequest.h \
	./mupnp/IconList.h \
	./mupnp/util/Debug.h \
	./mupnp/util/ListenerList.h \
	./mupnp/util/StringUtil.h \
	./mupnp/util/Mutex.h \
	./mupnp/util/Date.h \
	./mupnp/util/Vector.h \
	./mupnp/util/StringTokenizer.h \
	./mupnp/util/Exception.h \
	./mupnp/util/TimeUtil.h \
	./mupnp/util/Thread.h \
	./mupnp/mUPnP.h \
	./mupnp/Device.h \
	./mupnp/io/Reader.h \
	./mupnp/io/File.h \
	./mupnp/io/BufferedReader.h \
	./mupnp/io/LineNumberReader.h \
	./mupnp/io/FileList.h \
	./mupnp/io/InputStream.h \
	./mupnp/io/FileInputStream.h \
	./mupnp/io/StringBufferInputStream.h \
	./mupnp/io/StringReader.h \
	./mupnp/io/InputStreamReader.h \
	./mupnp/Action.h \
	./mupnp/ActionList.h \
	./mupnp/MediaServer.h

nobase_include_HEADERS = \
	$(mupnpcc_headers)
