############################################################
#
# mUPnP for C
#
# Copyright (C) Satoshi Konno 2002
#
############################################################

mupnpcc_headers = \
	./mupnp/soap/SOAPRequest.h \
	./mupnp/soap/SOAPResponse.h \
	./mupnp/soap/SOAP.h \
	./mupnp/ControlPoint.h \
	./mupnp/MediaServer.h \
	./mupnp/Device.h \
	./mupnp/ActionList.h \
	./mupnp/control/QueryResponse.h \
	./mupnp/control/QueryListener.h \
	./mupnp/control/RenewSubscriber.h \
	./mupnp/control/ActionResponse.h \
	./mupnp/control/ControlRequest.h \
	./mupnp/control/Control.h \
	./mupnp/control/ActionRequest.h \
	./mupnp/control/ActionListener.h \
	./mupnp/control/QueryRequest.h \
	./mupnp/control/ControlResponse.h \
	./mupnp/xml/NodeData.h \
	./mupnp/xml/StateVariableData.h \
	./mupnp/xml/ActionData.h \
	./mupnp/xml/Parser.h \
	./mupnp/xml/Attribute.h \
	./mupnp/xml/ArgumentData.h \
	./mupnp/xml/XML.h \
	./mupnp/xml/Node.h \
	./mupnp/xml/NodeList.h \
	./mupnp/xml/AttributeList.h \
	./mupnp/xml/DeviceData.h \
	./mupnp/xml/ServiceData.h \
	./mupnp/xml/ParserException.h \
	./mupnp/event/Subscriber.h \
	./mupnp/event/NotifyRequest.h \
	./mupnp/event/EventListener.h \
	./mupnp/event/Subscription.h \
	./mupnp/event/Property.h \
	./mupnp/event/SubscriberList.h \
	./mupnp/event/SubscriptionRequest.h \
	./mupnp/event/SubscriptionResponse.h \
	./mupnp/event/PropertyList.h \
	./mupnp/UPnPStatus.h \
	./mupnp/DeviceList.h \
	./mupnp/platform.h \
	./mupnp/ServiceStateTable.h \
	./mupnp/net/SocketCore.h \
	./mupnp/net/SocketInputStream.h \
	./mupnp/net/URI.h \
	./mupnp/net/MulticastSocket.h \
	./mupnp/net/URL.h \
	./mupnp/net/SocketUtil.h \
	./mupnp/net/NetworkInterface.h \
	./mupnp/net/DatagramPacket.h \
	./mupnp/net/NetworkInterfaceList.h \
	./mupnp/net/DatagramSocket.h \
	./mupnp/net/ServerSocket.h \
	./mupnp/net/HostInterface.h \
	./mupnp/net/InetSocketAddress.h \
	./mupnp/net/Socket.h \
	./mupnp/net/SocketImp.h \
	./mupnp/IconList.h \
	./mupnp/ServiceList.h \
	./mupnp/io/BufferedReader.h \
	./mupnp/io/FileList.h \
	./mupnp/io/InputStreamReader.h \
	./mupnp/io/Reader.h \
	./mupnp/io/File.h \
	./mupnp/io/StringReader.h \
	./mupnp/io/InputStream.h \
	./mupnp/io/StringBufferInputStream.h \
	./mupnp/io/FileInputStream.h \
	./mupnp/io/LineNumberReader.h \
	./mupnp/device/SearchListener.h \
	./mupnp/device/NTS.h \
	./mupnp/device/NotifyListener.h \
	./mupnp/device/Advertiser.h \
	./mupnp/device/USN.h \
	./mupnp/device/NT.h \
	./mupnp/device/MAN.h \
	./mupnp/device/Description.h \
	./mupnp/device/InvalidDescriptionException.h \
	./mupnp/device/Disposer.h \
	./mupnp/device/DeviceChangeListener.h \
	./mupnp/device/SearchResponseListener.h \
	./mupnp/device/ST.h \
	./mupnp/Action.h \
	./mupnp/common/Vector.h \
	./mupnp/UPnP.h \
	./mupnp/ArgumentList.h \
	./mupnp/StateVariable.h \
	./mupnp/Log.h \
	./mupnp/util/Exception.h \
	./mupnp/util/LoggerStdTarget.h \
	./mupnp/util/TimeUtil.h \
	./mupnp/util/LoggerTarget.h \
	./mupnp/util/Semaphore.h \
	./mupnp/util/Logger.h \
	./mupnp/util/StringUtil.h \
	./mupnp/util/Date.h \
	./mupnp/util/MessageQueue.h \
	./mupnp/util/LoggerFileTarget.h \
	./mupnp/util/Mutex.h \
	./mupnp/util/StringTokenizer.h \
	./mupnp/util/Listener.h \
	./mupnp/util/Thread.h \
	./mupnp/util/Log.h \
	./mupnp/util/Vector.h \
	./mupnp/util/Random.h \
	./mupnp/util/Debug.h \
	./mupnp/ssdp/HTTPUSocket.h \
	./mupnp/ssdp/SSDPNotifySocket.h \
	./mupnp/ssdp/SSDPPacket.h \
	./mupnp/ssdp/SSDPNotifySocketList.h \
	./mupnp/ssdp/SSDPSearchResponseSocket.h \
	./mupnp/ssdp/SSDPSearchSocketList.h \
	./mupnp/ssdp/SSDPRequest.h \
	./mupnp/ssdp/SSDP.h \
	./mupnp/ssdp/SSDPSearchSocket.h \
	./mupnp/ssdp/SSDPResponse.h \
	./mupnp/ssdp/HTTPMUSocket.h \
	./mupnp/ssdp/SSDPSearchResponse.h \
	./mupnp/ssdp/SSDPSearchRequest.h \
	./mupnp/ssdp/SSDPSearchResponseSocketList.h \
	./mupnp/ssdp/SSDPNotifyRequest.h \
	./mupnp/AllowedValue.h \
	./mupnp/AllowedValueRange.h \
	./mupnp/Argument.h \
	./mupnp/AllowedValueList.h \
	./mupnp/http/HTTPRequest.h \
	./mupnp/http/HTTPResponse.h \
	./mupnp/http/HTTPHeader.h \
	./mupnp/http/HTTPStatus.h \
	./mupnp/http/Parameter.h \
	./mupnp/http/HTTPPacket.h \
	./mupnp/http/HTTPWorkerThread.h \
	./mupnp/http/HTTPServer.h \
	./mupnp/http/ParameterList.h \
	./mupnp/http/HTTPServerList.h \
	./mupnp/http/HTTPSocket.h \
	./mupnp/http/HTTP.h \
	./mupnp/http/HTML.h \
	./mupnp/http/HTTPMessageQueue.h \
	./mupnp/http/HTTPDate.h \
	./mupnp/http/HTTPRequestListener.h \
	./mupnp/Service.h \
	./mupnp/mUPnP.h \
	./mupnp/Icon.h

nobase_include_HEADERS = \
	$(mupnpcc_headers)
